Fix crud endpoints
