# db/models/boil_types.go
@@ -56,35 +56,61 @@ type IngredientUnitEnum string
 // Enum values for IngredientUnitEnum
 const (
 	IngredientUnitEnumUNIT_UNSPECIFIED IngredientUnitEnum = "UNIT_UNSPECIFIED"
+	IngredientUnitEnumMILLIGRAM        IngredientUnitEnum = "MILLIGRAM"
 	IngredientUnitEnumGRAM             IngredientUnitEnum = "GRAM"
 	IngredientUnitEnumKILOGRAM         IngredientUnitEnum = "KILOGRAM"
 	IngredientUnitEnumMILLILITER       IngredientUnitEnum = "MILLILITER"
+	IngredientUnitEnumCENTILITER       IngredientUnitEnum = "CENTILITER"
 	IngredientUnitEnumLITER            IngredientUnitEnum = "LITER"
 	IngredientUnitEnumTEASPOON         IngredientUnitEnum = "TEASPOON"
 	IngredientUnitEnumTABLESPOON       IngredientUnitEnum = "TABLESPOON"
 	IngredientUnitEnumCUP              IngredientUnitEnum = "CUP"
 	IngredientUnitEnumPINCH            IngredientUnitEnum = "PINCH"
-	IngredientUnitEnumPIECE            IngredientUnitEnum = "PIECE"
+	IngredientUnitEnumUNIT             IngredientUnitEnum = "UNIT"
+	IngredientUnitEnumPACKAGE          IngredientUnitEnum = "PACKAGE"
+	IngredientUnitEnumCAN              IngredientUnitEnum = "CAN"
+	IngredientUnitEnumBOTTLE           IngredientUnitEnum = "BOTTLE"
+	IngredientUnitEnumJAR              IngredientUnitEnum = "JAR"
+	IngredientUnitEnumBAG              IngredientUnitEnum = "BAG"
+	IngredientUnitEnumBOX              IngredientUnitEnum = "BOX"
+	IngredientUnitEnumBUNCH            IngredientUnitEnum = "BUNCH"
+	IngredientUnitEnumHEAD             IngredientUnitEnum = "HEAD"
+	IngredientUnitEnumCLOVE            IngredientUnitEnum = "CLOVE"
+	IngredientUnitEnumLEAF             IngredientUnitEnum = "LEAF"
+	IngredientUnitEnumHANDFUL          IngredientUnitEnum = "HANDFUL"
 )
 
 func AllIngredientUnitEnum() []IngredientUnitEnum {
 	return []IngredientUnitEnum{
 		IngredientUnitEnumUNIT_UNSPECIFIED,
+		IngredientUnitEnumMILLIGRAM,
 		IngredientUnitEnumGRAM,
 		IngredientUnitEnumKILOGRAM,
 		IngredientUnitEnumMILLILITER,
+		IngredientUnitEnumCENTILITER,
 		IngredientUnitEnumLITER,
 		IngredientUnitEnumTEASPOON,
 		IngredientUnitEnumTABLESPOON,
 		IngredientUnitEnumCUP,
 		IngredientUnitEnumPINCH,
-		IngredientUnitEnumPIECE,
+		IngredientUnitEnumUNIT,
+		IngredientUnitEnumPACKAGE,
+		IngredientUnitEnumCAN,
+		IngredientUnitEnumBOTTLE,
+		IngredientUnitEnumJAR,
+		IngredientUnitEnumBAG,
+		IngredientUnitEnumBOX,
+		IngredientUnitEnumBUNCH,
+		IngredientUnitEnumHEAD,
+		IngredientUnitEnumCLOVE,
+		IngredientUnitEnumLEAF,
+		IngredientUnitEnumHANDFUL,
 	}
 }
 
 func (e IngredientUnitEnum) IsValid() error {
 	switch e {
-	case IngredientUnitEnumUNIT_UNSPECIFIED, IngredientUnitEnumGRAM, IngredientUnitEnumKILOGRAM, IngredientUnitEnumMILLILITER, IngredientUnitEnumLITER, IngredientUnitEnumTEASPOON, IngredientUnitEnumTABLESPOON, IngredientUnitEnumCUP, IngredientUnitEnumPINCH, IngredientUnitEnumPIECE:
+	case IngredientUnitEnumUNIT_UNSPECIFIED, IngredientUnitEnumMILLIGRAM, IngredientUnitEnumGRAM, IngredientUnitEnumKILOGRAM, IngredientUnitEnumMILLILITER, IngredientUnitEnumCENTILITER, IngredientUnitEnumLITER, IngredientUnitEnumTEASPOON, IngredientUnitEnumTABLESPOON, IngredientUnitEnumCUP, IngredientUnitEnumPINCH, IngredientUnitEnumUNIT, IngredientUnitEnumPACKAGE, IngredientUnitEnumCAN, IngredientUnitEnumBOTTLE, IngredientUnitEnumJAR, IngredientUnitEnumBAG, IngredientUnitEnumBOX, IngredientUnitEnumBUNCH, IngredientUnitEnumHEAD, IngredientUnitEnumCLOVE, IngredientUnitEnumLEAF, IngredientUnitEnumHANDFUL:
 		return nil
 	default:
 		return errors.New("enum is not valid")
